--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,57 @@
+:root{
+  --clr-1: #052b2f;
+  --clr-2: #073438;
+  --clr-3: #0e4b50;
+  --clr-4: #2d8f85;
+  --clr-5: #637c54;
+
+}
+
+div{
+  background: var(--clr-1);
+  color: var(--clr-2);
+  padding: 20px;
+  transition: transform 0.2s;
+
+}
+
+div:hover{
+  transform: scale(1.05);
+}
+
+.container.box::before,
+.container.box::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background: conic-gradient(
+    from var(--gradient-angle),
+    var(--clr-3),
+    var(--clr-4),
+    var(--clr-5),
+    var(--clr-4),
+    var(--clr-3));
+  border-radius: inherit;
+  animation: rotation 20s linear infinite;
+  transform-origin: center;
+  }
+
+
+
+
+
 body{
-  background: rgb(214, 212, 212);
+  background: var(--clr-white);
   text-align: center;
   display: inline;
+  margin: 0 auto;
 }
 
 .container{
-  background-color: #c94f8a;
+  background-color: black;
   border-radius: 15px;
-  box-shadow: 0 0 20px rgba(253, 253, 253, 0.2);
+  box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 5px 5px 15px 5px rgba(0,0,0,0);
   padding: 10px 20px;
   transition: transform 0.2s;
   width: 500px;
@@ -16,15 +60,23 @@ body{
   align-items: center;
   margin: auto;
   margin-top: 20px;
+ 
 
-  -webkit-box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 5px 5px 15px 5px rgba(0,0,0,0); 
-box-shadow: 5px 5px 15px 5px #FF8080, -9px 5px 15px 5px #FFE488, -7px -5px 15px 5px #8CFF85, 12px -5px 15px 5px #80C7FF, 12px 10px 15px 7px #E488FF, -10px 10px 15px 7px #FF616B, -10px -7px 27px 1px #8E5CFF, 5px 5px 15px 5px rgba(0,0,0,0);
+  
 }
+
+
+
+
 
 h1{
   font-size: x-large;
   text-align: center;
-  color: blue;
+  color: whitesmoke;
+}
+
+::placeholder{
+  color: grey;
 }
 
 label{
@@ -47,6 +99,46 @@ input{
   border-radius: 4px;
   font-size: 12px;
   
+
+}
+
+textarea{
+  display: block;
+  width: 97%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid black;
+  border-radius: 4px;
+  font-size: 12px;
+  resize: none;
+  min-height: 100px;
+  max-height: 150px;
+}
+
+button{
+  display: block;
+  width: 30%;
+  padding: 10px 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: white;
+  color: black;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 20px;
+  margin-left: 35%;
+  margin-right: 35%;
+
+
+  -webkit-transition: background-color 0.3s ease;
+  cursor: pointer;
 
 }
 
@@ -74,7 +166,7 @@ textarea{
   
 }
 
-button{
+/*button{
   padding:10px 15px;
   border-radius: 6px;
   margin: 15px;
@@ -84,8 +176,8 @@ button{
   background-color: blue;
   width: 80px;
   font-size: 16px;
-}
+}*/
 
 button:hover{
-  background-color: #32e86e8e;
+  background-color: #8E5CFF;
 }
